# APOE_proteomics

./: LICENSE  README.md  binn.ipynb  lda.ipynb  pyproject.toml  r2correlation.ipynb  results_summarize.ipynb
analysis/: ad_markers.R  betaVSbetaMatrix.R  celltype.R  main_local.R  main_plots.R  sensitivity.R  setting.R  snp.R  src.R
pysrc/sumAPOE/: __init__.py  loader.py  utils.py
pysrc/sumAPOE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
results/ADNI/e2vse3e3/: ab2protein.csv  ab2protein_adjapoe.csv  ab_mediation.csv  apoe2_binn.csv  apoe2protein.csv  apoe2protein_adjab.csv  neg_allage.csv  protein_mediation.csv
results/ADNI/e4vse3e3/: ab2protein.csv  ab2protein_adjapoe.csv  ab_mediation.csv  apoe2protein.csv  apoe2protein_adjab.csv  apoe4_binn.csv  neg_allage.csv  protein_mediation.csv
results/ADNI_MS/e2vse3e3/: ab2protein.csv  ab2protein_adjapoe.csv  ab_mediation.csv  apoe2protein.csv  apoe2protein_adjab.csv  protein_mediation.csv
results/ADNI_MS/e4vse3e3/: ab2protein.csv  ab2protein_adjapoe.csv  ab_mediation.csv  apoe2protein.csv  apoe2protein_adjab.csv  protein_mediation.csv
results/BF2OLINK/e2vse3e3/: ab2protein.csv  ab2protein_adjapoe.csv  ab_mediation.csv  apoe2protein.csv  apoe2protein_adjab.csv  apoe_ab_interaction.csv  apoe_merged.csv  neg_allage.csv  neg_allage_interaction.csv  neg_older.csv  neg_younger.csv  pos_allage.csv  protein_mediation.csv  protein_regulation.csv
results/BF2OLINK/e2vse3e3_AD/: ab2protein.csv  ab2protein_adjapoe.csv  ab_mediation.csv  apoe2protein.csv  apoe2protein_adjab.csv  apoe_ab_interaction.csv  apoe_merged.csv  (+6 more)
(+199 files in other folders)
