[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sumAPOE"
version = "0.1.0"
description = "APOE proteomics utilities and loaders"
requires-python = ">=3.10"
dependencies = ["pandas", "numpy"]

[tool.setuptools]
package-dir = {"" = "pysrc"}

[tool.setuptools.packages.find]
where = ["pysrc"]